Update transaction management code to use Conn instead of Tx class